--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         .close-button {
             background-color: red;
         }
+
+        html,body{
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
