--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
             background-color: red;
         }
 
-        html,body{
+        html, body {
             width: 100%;
             height: 100%;
+            overflow: hidden;
         }
     </style>
+
 </head>
 <body>
 <script>
@@ -46,7 +48,91 @@
         .then(data => console.log(data))
         .catch(error => console.error(error))
 
+
+    window.onload = () => {
+        let app = new PIXI.Application({width: 400, height: 300});
+        let container = new PIXI.Container();
+        let center = PIXI.Sprite.from('center.png');
+        let sprite2 = PIXI.Sprite.from('es.png');
+        container.addChild(center)
+        container.addChild(sprite2)
+        app.stage.addChild(container)
+
+        body_container.appendChild(app.view);
+
+        //修改屏幕中心
+        container.pivot.set(center.width / 2, center.height / 2);
+        container.position.set(app.screen.width / 2, app.screen.height / 2);
+        center.anchor.set(0.5)
+        window.addEventListener("mousewheel", (event) => {
+            const step = event.wheelDelta > 0 ? 0.02 : -0.02
+            if (app.stage.scale.x + step >= 0.1) {
+                app.stage.scale.x += step
+                app.stage.scale.y += step
+                container.position.set(app.screen.width / 2 / app.stage.scale.x, app.screen.height / 2 / app.stage.scale.y);
+                center.scale.x = 1 / app.stage.scale.x
+                center.scale.y = 1 / app.stage.scale.y
+            }
+        })
+        PIXI.Ticker.targetFPMS = 1;
+        app.ticker.minFPS = 30;
+        app.ticker.maxFPS = 60;
+        app.ticker.add((delta) => {
+            //修改画板大小
+            app.renderer.resize(body_container.getClientRects()[0].width - 150 - 20, body_container.getClientRects()[0].height - 60 - 20)
+
+        });
+        app.stage.interactive = true;
+        app.stage.hitArea = app.screen;
+        app.stage.on('pointerup', onDragEnd);
+        app.stage.on('pointerupoutside', onDragEnd);
+        app.stage.on('pointerdown', onDragStart, container);
+        let dragTarget = null;
+        let old_event = {}
+        let old_position = {}
+
+        function onDragMove(event) {
+            if (dragTarget) {
+                dragTarget.x = old_position.x + event.client.x - old_event.x;
+                dragTarget.y = old_position.y + event.client.y - old_event.y;
+            }
+        }
+
+        function onDragStart(event) {
+            old_event = {x: event.clientX, y: event.clientY};
+            old_position = {x: this.x, y: this.y}
+            this.alpha = 0.5;
+            dragTarget = this;
+            app.stage.on('pointermove', onDragMove);
+        }
+
+        function onDragEnd() {
+            if (dragTarget) {
+                app.stage.off('pointermove', onDragMove);
+                dragTarget.alpha = 1;
+                dragTarget = null;
+            }
+        }
+
+        let tool_bar = document.getElementById('tool_bar')
+        let window_position = []
+        tool_bar.addEventListener('mousedown', (event) => {
+            if (event.button === 0) {
+                window_position = {x: event.screenX, y: event.screenY}
+            }
+        })
+        tool_bar.addEventListener('mouseup', (event) => {
+            if (event.button === 0) {
+                window_position.x = event.screenX - window_position.x
+                window_position.y = event.screenY - window_position.y
+                ipcRenderer.send('window-drag', window_position)
+            }
+        })
+    }
+
+
 </script>
 <script src="./tool_bar.js"></script>
+<script src="./pixi.min.js"></script>
 </body>
 </html>
