--- a/login.html
+++ b/login.html
@@ -17,25 +17,33 @@
     <form class="layui-form login-form">
         <div style="font-size:32px;text-align: center;"></div>
 
-        <div>
+        <div class="layui-form-item">
             <i class="layui-icon layui-icon-username admin-icon admin-icon-username"></i>
             <input type="text" id="username" name="username" placeholder="请输入用户名"
                    autocomplete="off"
                    class="layui-input admin-input admin-input-username">
         </div>
-        <div>
+        <div class="layui-form-item">
             <i class="layui-icon layui-icon-password admin-icon admin-icon-password"></i>
             <input type="password" id="password" name="password"
                    placeholder="请输入密码"
                    autocomplete="off"
                    class="layui-input admin-input">
         </div>
-        <div>
+        <div class="layui-form-item">
             <i class="layui-icon layui-icon-template-1 admin-icon admin-icon-username"></i>
             <input type="text" id="card" name="card"
                    placeholder="请输入卡密(已激活可忽略)"
                    autocomplete="off"
                    class="layui-input admin-input">
+        </div>
+        <div class="layui-form-item">
+            <i class="layui-icon layui-icon-website admin-icon admin-icon-username"></i>
+            <div id="sel" class="layui-input" style="width: 300px;display: inline-block;padding-left: 0px;margin-left: 10px;">
+                <select id="dev" name="dev" lay-verify="required">
+                    <option value="">选择网卡适配</option>
+                </select>
+            </div>
         </div>
         <div align="center">
             <button class="layui-btn admin-button" style="margin: auto" type="button" onclick="login()">登陆</button>
@@ -43,6 +51,8 @@
     </form>
 </div>
 <script>
+    const pcap = require("npcap");
+    const {ipcRenderer} = require('electron');
     let css_layui = document.createElement("link");
     css_layui.setAttribute("rel", "stylesheet");
     css_layui.setAttribute("href", "./layui/css/layui.css");
@@ -54,17 +64,36 @@
     document.head.appendChild(css_layui);
     document.body.appendChild(script_layui);
 
+    let dev = document.getElementById("dev")
+
+    for (let i of pcap.findalldevs()) {
+        let temp = document.createElement("option")
+        temp.value = i.description;
+        temp.textContent = i.description;
+        dev.appendChild(temp);
+    }
+
+    layui.render("select");
+
     function login() {
         //校验
         var username = document.getElementById("username").value;
         var password = document.getElementById("password").value;
         var card = document.getElementById("card").value;
+        var dev_name = document.getElementById("dev").value;
         if (username == "") {
-            alert("账号不能为空");
+            layer.msg("账号不能为空", {icon: 2, time: 3000}, function () {
+            });
             return false;
         }
         if (password == "") {
-            alert("密码不能为空");
+            layer.msg("密码不能为空", {icon: 2, time: 3000}, function () {
+            });
+            return false;
+        }
+        if (dev_name == "") {
+            layer.msg("请选择网卡适配器", {icon: 2, time: 3000}, function () {
+            });
             return false;
         }
         const formData = new FormData();
@@ -81,16 +110,17 @@
             .then(data => {
                 if (data.status === true) {
                     localStorage.setItem("token", data.token);
+                    ipcRenderer.send("login", data)
                     layer.msg(data.message, {icon: 1, time: 1000}, function () {
                         location.href = "./index.html"
                     });
                 } else {
-                    layer.msg(data.message, {icon: 1, time: 3000}, function () {
+                    layer.msg(data.message, {icon: 2, time: 3000}, function () {
                     });
                 }
             })
             .catch(error => {
-                layer.msg(error, {icon: 1, time: 3000}, function () {
+                layer.msg(error, {icon: 2, time: 3000}, function () {
                 });
             });
 
@@ -143,7 +173,18 @@
         display: inline-block;
         margin-left: 10px;
     }
-
+    .login-form #sel input {
+        width: 300px;
+        display: inline-block;
+        margin-left: 0;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    /*.login-form select {*/
+    /*    width: 300px;*/
+    /*    display: inline-block;*/
+    /*    margin-left: 10px;*/
+    /*}*/
     .login-form .admin-input-verify {
         width: 180px;
     }
